fix unsafe Issues